[typo] smooth -> is_smooth

--- a/src/submission/test_config.toml
+++ b/src/submission/test_config.toml
@@ -20,7 +20,7 @@ n_turns = 5000
 gap_length = 1
 n_gaps = 4
 n_segments = 8
-smooth = false
+is_smooth = false
 h_rf = 416
 ion_field_model = 'weak'
 electron_field_model = 'weak'
