--- a/src/submission/test_config.toml
+++ b/src/submission/test_config.toml
@@ -25,7 +25,7 @@ h_rf = 416
 ion_field_model = 'weak'
 electron_field_model = 'weak'
 charge_variation = 0
-pressure_variation = 0
+pressure_variation = [0]
 average_pressure = [2.9e12]
 beam_current = 0.5
 sigma_i = [2.79e-22]
