--- a/src/submission/config_realistic_10Ah_100mA_H2.toml
+++ b/src/submission/config_realistic_10Ah_100mA_H2.toml
@@ -26,7 +26,7 @@ beam_current = 0.1
 ion_field_model = 'weak'
 electron_field_model = 'weak'
 charge_variation = 0
-pressure_variation = [0]
+pressure_variation = [0, 0, 0]
 code='mbtrack2'
 average_pressure = [2.01e13, 2.52e13, 2.52e13]
 sigma_i = [0.36e-22, 1.78e-22, 2.79e-22]
