--- a/src/submission/config_realistic_1Ah_10mA_H2.toml
+++ b/src/submission/config_realistic_1Ah_10mA_H2.toml
@@ -26,7 +26,7 @@ beam_current = 0.01
 ion_field_model = 'weak'
 electron_field_model = 'weak'
 charge_variation = 0
-pressure_variation = [0]
+pressure_variation = [0, 0, 0]
 code='mbtrack2'
 average_pressure = [9.7e12, 1.21e12, 1.21e12]
 sigma_i = [0.36e-22, 1.78e-22, 2.79e-22]
