--- a/src/submission/example_scan_config.toml
+++ b/src/submission/example_scan_config.toml
@@ -58,6 +58,7 @@ sigma_i = [2.79e-22]
 ion_mass = [44]
 code = "mbtrack2"
 feedback_tau = 0
+emittance_ratio = [0.02]
 
 # =============================================================================
 # Scan Parameters
@@ -73,4 +74,4 @@ feedback_tau = 0
 #          generates 4 jobs: (10, 0.1), (10, 0.2), (20, 0.1), (20, 0.2)
 [scan]
 # Scan beam current using a range specification
-beam_current = {start = 0.1, stop = 0.5, num = 5}
+beam_current = [0.01, 0.05, 0.10, 0.15, 0.20, 0.25, 0.30, 0.35, 0.40, 0.45, 0.50]
